--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "devDependencies": {
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.14.0"
+  },
+  "dependencies": {
+    "ajv": "^8.17.1",
+    "jest": "^29.7.0",
+    "playwright": "^1.51.1"
   }
 }
